Fixed action dropdown list issue where the last few action dropdowns (in list) are not visible as they are hidden inside the table-responsive div

--- a/app/bundles/CoreBundle/Assets/css/app.css
+++ b/app/bundles/CoreBundle/Assets/css/app.css
@@ -1616,6 +1616,16 @@ ul.dropdown-menu-form {
   max-height: 300px;
   overflow-y: auto;
 }
+@media (max-width: 767px) {
+  .table-responsive .dropdown-menu {
+    position: static !important;
+  }
+}
+@media (min-width: 768px) {
+  .table-responsive {
+    overflow: visible;
+  }
+}
 .nav > li > a {
   font-weight: normal;
 }
